[tool.poetry]
name = "project-name"
version = "0.1.0"
description = ""
authors = ["nelson <nelson.amadi001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
category-encoders = "^2.6.3"
feature-engine = "^1.7.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
